--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "apexcharts": "^3.50.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
+    "jspdf": "^2.5.2",
     "lightgallery": "^2.7.1",
     "ng-apexcharts": "^1.7.4",
     "ng-circle-progress": "^1.7.1",
