refactor/modify-print-pdf-function

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/list": "^6.1.4",
     "@fullcalendar/timegrid": "^6.1.15",
+    "angularx-qrcode": "^15.0.1",
     "apexcharts": "^3.50.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
@@ -41,6 +42,7 @@
     "ngx-perfect-scrollbar": "^10.1.1",
     "ngx-scrollbar": "^11.0.0",
     "ngx-slick-carousel": "^15.0.0",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
